--- a/aerospace/.aerospace.toml
+++ b/aerospace/.aerospace.toml
@@ -184,8 +184,8 @@ run = 'move-node-to-workspace G'
     alt-shift-l = 'move right'
 
     # See: https://nikitabobko.github.io/AeroSpace/commands#resize
-    # alt-minus = 'resize smart -50'
-    # alt-equal = 'resize smart +50'
+    alt-minus = 'resize smart -50'
+    alt-equal = 'resize smart +50'
 
     # See: https://nikitabobko.github.io/AeroSpace/commands#workspace
     alt-1 = 'workspace 1'
