Modify aerospace config for work and home external monitors

--- a/aerospace/.aerospace.toml
+++ b/aerospace/.aerospace.toml
@@ -129,10 +129,10 @@ run = 'move-node-to-workspace G'
 [gaps]
     inner.horizontal = 15
     inner.vertical =   15
-    outer.left =       15
-    outer.bottom =     15
-    outer.top =        15
-    outer.right =      15
+    outer.left =       [{ monitor."DELL S2319H" = 25 }, {monitor."Built-in Display" = 15}, { monitor."VA2409-FHD" = 20 }, 15 ]
+    outer.bottom =     [{monitor."DELL S2319H" = 20 }, {monitor."Built-in Display" = 15}, { monitor."VA2409-FHD" = 20 }, 15 ]
+    outer.top =        [{monitor."DELL S2319H" = 35 }, {monitor."Built-in Display" = 15}, { monitor."VA2409-FHD" = 35 }, 15 ]
+    outer.right =      [{monitor."DELL S2319H" = 25 }, {monitor."Built-in Display" = 15}, { monitor."VA2409-FHD" = 20 }, 15 ]
 
 # 'main' binding mode declaration
 # See: https://nikitabobko.github.io/AeroSpace/guide#binding-modes
