--- a/aerospace/.aerospace.toml
+++ b/aerospace/.aerospace.toml
@@ -10,7 +10,7 @@ config-version = 2
 after-startup-command = ['exec-and-forget sketchybar']
 
 exec-on-workspace-change = ['/bin/bash', '-c',
-  'sketchybar --trigger aerospace_workspace_change FOCUSED_WORKSPACE=$AEROSPACE_FOCUSED_WORKSPACE PREV_WORKSPACE=$AEROSPACE_PREV_WORKSPACE','exec-and-forget borders active_color=0xffe1e3e4 inactive_color=0xff494d64 width=0']
+  'sketchybar --trigger aerospace_workspace_change FOCUSED_WORKSPACE=$AEROSPACE_FOCUSED_WORKSPACE PREV_WORKSPACE=$AEROSPACE_PREV_WORKSPACE','exec-and-forget borders active_color=0xffff0000 inactive_color=0xff494d64 width=5.0']
 
 # Start AeroSpace at login
 start-at-login = true
